--- a/data/Untitled.ipynb
+++ b/data/Untitled.ipynb
@@ -220,8 +220,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "e5b2a9bf-c1f5-4dda-b0c2-4c5a92cd4786",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d1 = d1.rename(columns={'strata':'category','division':\"key\",'index':'value'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9b86b80f-12d3-4968-9edb-25db6b81f18f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d1.to_json('cpi_2d_strata.json', orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "27f5944a-6872-443d-abc5-785f5360fb4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = pd.read_csv(\"cpi_item_dict.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7b7124ca-8236-4468-98ff-9b95566e7e69",
    "metadata": {},
    "outputs": [
     {
@@ -245,9 +275,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>strata</th>\n",
-       "      <th>division</th>\n",
-       "      <th>index</th>\n",
+       "      <th>category</th>\n",
+       "      <th>key</th>\n",
+       "      <th>value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -412,72 +442,309 @@
        "</div>"
       ],
       "text/plain": [
-       "     strata division  index\n",
-       "532   urban       01  153.8\n",
-       "720   rural       01  138.7\n",
-       "908   urban       02  169.2\n",
-       "1096  rural       02  175.0\n",
-       "1284  urban       03   91.7\n",
-       "1472  rural       03   99.7\n",
-       "1660  urban       04  125.0\n",
-       "1848  rural       04  119.0\n",
-       "2036  urban       05  126.8\n",
-       "2224  rural       05  116.0\n",
-       "2412  urban       06  127.9\n",
-       "2600  rural       06  122.7\n",
-       "2788  urban       07  121.2\n",
-       "2976  rural       07  116.1\n",
-       "3164  urban       08   95.7\n",
-       "3352  rural       08   98.0\n",
-       "3540  urban       09  117.0\n",
-       "3728  rural       09  115.5\n",
-       "3916  urban       10  124.3\n",
-       "4104  rural       10  117.1\n",
-       "4292  urban       11  146.9\n",
-       "4480  rural       11  131.6\n",
-       "4668  urban       12  109.6\n",
-       "4856  rural       12  112.7\n",
-       "5044  urban       13  120.3\n",
-       "5232  rural       13  119.1"
+       "     category key  value\n",
+       "532     urban  01  153.8\n",
+       "720     rural  01  138.7\n",
+       "908     urban  02  169.2\n",
+       "1096    rural  02  175.0\n",
+       "1284    urban  03   91.7\n",
+       "1472    rural  03   99.7\n",
+       "1660    urban  04  125.0\n",
+       "1848    rural  04  119.0\n",
+       "2036    urban  05  126.8\n",
+       "2224    rural  05  116.0\n",
+       "2412    urban  06  127.9\n",
+       "2600    rural  06  122.7\n",
+       "2788    urban  07  121.2\n",
+       "2976    rural  07  116.1\n",
+       "3164    urban  08   95.7\n",
+       "3352    rural  08   98.0\n",
+       "3540    urban  09  117.0\n",
+       "3728    rural  09  115.5\n",
+       "3916    urban  10  124.3\n",
+       "4104    rural  10  117.1\n",
+       "4292    urban  11  146.9\n",
+       "4480    rural  11  131.6\n",
+       "4668    urban  12  109.6\n",
+       "4856    rural  12  112.7\n",
+       "5044    urban  13  120.3\n",
+       "5232    rural  13  119.1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d1.rename(columns={'strata':'category','division':\"key\",'index':})"
+    "d1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "9b86b80f-12d3-4968-9edb-25db6b81f18f",
+   "execution_count": 51,
+   "id": "ee3b710d-095d-442c-839b-3a0d8f0ab6a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = pd.Series()\n",
+    "for i in d1['key']:\n",
+    "    idx = int(i)\n",
+    "    a=pd.concat([a, pd.Series([names[names['code'] == idx]['group'].item()])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b822430e-8cf4-4b17-bf95-de946fccd9b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d1= pd.concat([d1.reset_index(drop=True),a.reset_index(drop=True)], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "d7949fde-003e-40da-890c-0d4afd9b4bbf",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>value</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>153.8</td>\n",
+       "      <td>Food &amp; Non-Alcoholic Beverages</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>138.7</td>\n",
+       "      <td>Food &amp; Non-Alcoholic Beverages</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>169.2</td>\n",
+       "      <td>Alcoholic Beverages &amp; Tobacco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>Alcoholic Beverages &amp; Tobacco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>91.7</td>\n",
+       "      <td>Clothing &amp; Footwear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>99.7</td>\n",
+       "      <td>Clothing &amp; Footwear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>Housing, Utilities, Gas &amp; Other Fuels</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>Housing, Utilities, Gas &amp; Other Fuels</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>126.8</td>\n",
+       "      <td>Household Furnishings, Equipment &amp; Maintenance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>Household Furnishings, Equipment &amp; Maintenance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>127.9</td>\n",
+       "      <td>Health</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>122.7</td>\n",
+       "      <td>Health</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>121.2</td>\n",
+       "      <td>Transport</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>116.1</td>\n",
+       "      <td>Transport</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>95.7</td>\n",
+       "      <td>Information &amp; Communication</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>Information &amp; Communication</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>Recreation, Sport &amp; Culture</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>115.5</td>\n",
+       "      <td>Recreation, Sport &amp; Culture</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>124.3</td>\n",
+       "      <td>Education</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>117.1</td>\n",
+       "      <td>Education</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>146.9</td>\n",
+       "      <td>Restaurant &amp; Accommodation Services</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>131.6</td>\n",
+       "      <td>Restaurant &amp; Accommodation Services</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>109.6</td>\n",
+       "      <td>Insurance &amp; Financial Services</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>112.7</td>\n",
+       "      <td>Insurance &amp; Financial Services</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>urban</td>\n",
+       "      <td>120.3</td>\n",
+       "      <td>Personal Care, Social Protection &amp; Miscellaneo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>rural</td>\n",
+       "      <td>119.1</td>\n",
+       "      <td>Personal Care, Social Protection &amp; Miscellaneo...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'[{\"strata\":\"urban\",\"division\":\"01\",\"index\":153.8},{\"strata\":\"rural\",\"division\":\"01\",\"index\":138.7},{\"strata\":\"urban\",\"division\":\"02\",\"index\":169.2},{\"strata\":\"rural\",\"division\":\"02\",\"index\":175.0},{\"strata\":\"urban\",\"division\":\"03\",\"index\":91.7},{\"strata\":\"rural\",\"division\":\"03\",\"index\":99.7},{\"strata\":\"urban\",\"division\":\"04\",\"index\":125.0},{\"strata\":\"rural\",\"division\":\"04\",\"index\":119.0},{\"strata\":\"urban\",\"division\":\"05\",\"index\":126.8},{\"strata\":\"rural\",\"division\":\"05\",\"index\":116.0},{\"strata\":\"urban\",\"division\":\"06\",\"index\":127.9},{\"strata\":\"rural\",\"division\":\"06\",\"index\":122.7},{\"strata\":\"urban\",\"division\":\"07\",\"index\":121.2},{\"strata\":\"rural\",\"division\":\"07\",\"index\":116.1},{\"strata\":\"urban\",\"division\":\"08\",\"index\":95.7},{\"strata\":\"rural\",\"division\":\"08\",\"index\":98.0},{\"strata\":\"urban\",\"division\":\"09\",\"index\":117.0},{\"strata\":\"rural\",\"division\":\"09\",\"index\":115.5},{\"strata\":\"urban\",\"division\":\"10\",\"index\":124.3},{\"strata\":\"rural\",\"division\":\"10\",\"index\":117.1},{\"strata\":\"urban\",\"division\":\"11\",\"index\":146.9},{\"strata\":\"rural\",\"division\":\"11\",\"index\":131.6},{\"strata\":\"urban\",\"division\":\"12\",\"index\":109.6},{\"strata\":\"rural\",\"division\":\"12\",\"index\":112.7},{\"strata\":\"urban\",\"division\":\"13\",\"index\":120.3},{\"strata\":\"rural\",\"division\":\"13\",\"index\":119.1}]'"
+       "   category  value                                                  0\n",
+       "0     urban  153.8                     Food & Non-Alcoholic Beverages\n",
+       "1     rural  138.7                     Food & Non-Alcoholic Beverages\n",
+       "2     urban  169.2                      Alcoholic Beverages & Tobacco\n",
+       "3     rural  175.0                      Alcoholic Beverages & Tobacco\n",
+       "4     urban   91.7                                Clothing & Footwear\n",
+       "5     rural   99.7                                Clothing & Footwear\n",
+       "6     urban  125.0              Housing, Utilities, Gas & Other Fuels\n",
+       "7     rural  119.0              Housing, Utilities, Gas & Other Fuels\n",
+       "8     urban  126.8     Household Furnishings, Equipment & Maintenance\n",
+       "9     rural  116.0     Household Furnishings, Equipment & Maintenance\n",
+       "10    urban  127.9                                             Health\n",
+       "11    rural  122.7                                             Health\n",
+       "12    urban  121.2                                          Transport\n",
+       "13    rural  116.1                                          Transport\n",
+       "14    urban   95.7                        Information & Communication\n",
+       "15    rural   98.0                        Information & Communication\n",
+       "16    urban  117.0                        Recreation, Sport & Culture\n",
+       "17    rural  115.5                        Recreation, Sport & Culture\n",
+       "18    urban  124.3                                          Education\n",
+       "19    rural  117.1                                          Education\n",
+       "20    urban  146.9                Restaurant & Accommodation Services\n",
+       "21    rural  131.6                Restaurant & Accommodation Services\n",
+       "22    urban  109.6                     Insurance & Financial Services\n",
+       "23    rural  112.7                     Insurance & Financial Services\n",
+       "24    urban  120.3  Personal Care, Social Protection & Miscellaneo...\n",
+       "25    rural  119.1  Personal Care, Social Protection & Miscellaneo..."
       ]
      },
-     "execution_count": 24,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d1.to_json(orient='records')"
+    "del d1['key']\n",
+    "d1.rename(columns={'0':'key'})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27f5944a-6872-443d-abc5-785f5360fb4e",
+   "id": "c09d3faa-6a20-4cfb-8fbd-341cc7953448",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d1"
+   ]
   }
  ],
  "metadata": {
