--- a/data/Untitled.ipynb
+++ b/data/Untitled.ipynb
@@ -505,245 +505,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "id": "d7949fde-003e-40da-890c-0d4afd9b4bbf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>category</th>\n",
-       "      <th>value</th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>153.8</td>\n",
-       "      <td>Food &amp; Non-Alcoholic Beverages</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>138.7</td>\n",
-       "      <td>Food &amp; Non-Alcoholic Beverages</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>169.2</td>\n",
-       "      <td>Alcoholic Beverages &amp; Tobacco</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>175.0</td>\n",
-       "      <td>Alcoholic Beverages &amp; Tobacco</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>91.7</td>\n",
-       "      <td>Clothing &amp; Footwear</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>99.7</td>\n",
-       "      <td>Clothing &amp; Footwear</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>125.0</td>\n",
-       "      <td>Housing, Utilities, Gas &amp; Other Fuels</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>119.0</td>\n",
-       "      <td>Housing, Utilities, Gas &amp; Other Fuels</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>126.8</td>\n",
-       "      <td>Household Furnishings, Equipment &amp; Maintenance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>Household Furnishings, Equipment &amp; Maintenance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>127.9</td>\n",
-       "      <td>Health</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>122.7</td>\n",
-       "      <td>Health</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>121.2</td>\n",
-       "      <td>Transport</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>116.1</td>\n",
-       "      <td>Transport</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>95.7</td>\n",
-       "      <td>Information &amp; Communication</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>Information &amp; Communication</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>117.0</td>\n",
-       "      <td>Recreation, Sport &amp; Culture</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>115.5</td>\n",
-       "      <td>Recreation, Sport &amp; Culture</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>124.3</td>\n",
-       "      <td>Education</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>117.1</td>\n",
-       "      <td>Education</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>146.9</td>\n",
-       "      <td>Restaurant &amp; Accommodation Services</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>131.6</td>\n",
-       "      <td>Restaurant &amp; Accommodation Services</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>109.6</td>\n",
-       "      <td>Insurance &amp; Financial Services</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>112.7</td>\n",
-       "      <td>Insurance &amp; Financial Services</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>urban</td>\n",
-       "      <td>120.3</td>\n",
-       "      <td>Personal Care, Social Protection &amp; Miscellaneo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>rural</td>\n",
-       "      <td>119.1</td>\n",
-       "      <td>Personal Care, Social Protection &amp; Miscellaneo...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   category  value                                                  0\n",
-       "0     urban  153.8                     Food & Non-Alcoholic Beverages\n",
-       "1     rural  138.7                     Food & Non-Alcoholic Beverages\n",
-       "2     urban  169.2                      Alcoholic Beverages & Tobacco\n",
-       "3     rural  175.0                      Alcoholic Beverages & Tobacco\n",
-       "4     urban   91.7                                Clothing & Footwear\n",
-       "5     rural   99.7                                Clothing & Footwear\n",
-       "6     urban  125.0              Housing, Utilities, Gas & Other Fuels\n",
-       "7     rural  119.0              Housing, Utilities, Gas & Other Fuels\n",
-       "8     urban  126.8     Household Furnishings, Equipment & Maintenance\n",
-       "9     rural  116.0     Household Furnishings, Equipment & Maintenance\n",
-       "10    urban  127.9                                             Health\n",
-       "11    rural  122.7                                             Health\n",
-       "12    urban  121.2                                          Transport\n",
-       "13    rural  116.1                                          Transport\n",
-       "14    urban   95.7                        Information & Communication\n",
-       "15    rural   98.0                        Information & Communication\n",
-       "16    urban  117.0                        Recreation, Sport & Culture\n",
-       "17    rural  115.5                        Recreation, Sport & Culture\n",
-       "18    urban  124.3                                          Education\n",
-       "19    rural  117.1                                          Education\n",
-       "20    urban  146.9                Restaurant & Accommodation Services\n",
-       "21    rural  131.6                Restaurant & Accommodation Services\n",
-       "22    urban  109.6                     Insurance & Financial Services\n",
-       "23    rural  112.7                     Insurance & Financial Services\n",
-       "24    urban  120.3  Personal Care, Social Protection & Miscellaneo...\n",
-       "25    rural  119.1  Personal Care, Social Protection & Miscellaneo..."
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "del d1['key']\n",
-    "d1.rename(columns={'0':'key'})"
+    "d1 = d1.rename(columns={0:'key'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "c09d3faa-6a20-4cfb-8fbd-341cc7953448",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d1"
+    "d1.to_json('cpi_2d_strata.json', orient='records')"
    ]
   }
  ],
